Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27828

Creator console is missing error output for some tools

XMLWordPrintable

    • Windows
    • 6adca44116 (qt-creator/qt-creator/master) 6adca44116 (qt-creator/qt-creator/qds-dev) 6adca44116 (qt-creator/qt-creator/9.0)

      The general output pane misses some output of my ctest call. In the console for each failed test I get the output, what has failed.

      But in creator it only says failed.

       

      On top of each screenshot you can see, that it is the same command with identical arguments that was used for both.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            zanjysan zanjysan
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes